Fix Remove button icon contrast (WCAG 1.4.11) (#17)
* Initial plan

* Fix Remove button color contrast - add white color to basket icons


---------

--- a/webapp/styles.css
+++ b/webapp/styles.css
@@ -552,10 +552,12 @@ button:disabled {
 
 .remove-btn, .remove-btn-small {
     background-color: var(--button-danger);
+    color: white;
 }
 
 .remove-btn:hover, .remove-btn-small:hover {
     background-color: var(--button-danger-hover);
+    color: white;
 }
 
 .back-btn {
